(library
  (name pyml)
  (public_name pyml)
  (modules numpy py pycaml pyml_arch pytypes pywrappers)
  (c_names numpy_stubs pyml_stubs)
  (wrapped false)
  (libraries bigarray pyutils))

(executables
  (names generate)
  (modules generate)
  (libraries pyutils))

(library
  (name pyutils)
  (public_name pyml.pyutils)
  (modules pyutils)
  (wrapped false)
  (libraries unix))

(rule
  (targets pywrappers.ml pyml.h pyml_dlsyms.inc pyml_wrappers.inc)
  (deps (:gen generate.exe))
  (action (run %{gen})))

(rule (copy pyml_arch_unix.ml pyml_arch_linux.ml))

(rule
  (targets pyml_arch.ml)
  (deps (:pyml_arch pyml_arch_%{ocaml-config:system}.ml))
  (action (copy %{pyml_arch} pyml_arch.ml)))

(library
  (name pyml_tests_common)
  (modules pyml_tests_common)
  (wrapped false)
  (libraries pyml))

(test
  (name numpy_tests)
  (modules numpy_tests)
  (libraries pyml pyml_tests_common pyutils))

(test
  (name pyml_tests)
  (modules pyml_tests)
  (libraries pyml pyml_tests_common pyutils))
